generando enlaces de las paginas

--- a/src/html/login.html
+++ b/src/html/login.html
@@ -67,10 +67,13 @@
                     <button class="btn btn-dark" onclick="registro()">Registrar</button>
                 </div> -->
                 <div class="col-mv-12">
+                    <div class="register">
                     <input type="text" id="correo1" placeholder="Ingresa tu nombre completo">
-                    <br>
+                    </div>
+                    <div class="register"></div>
                     <input type="text" id="contraseña1" placeholder="Ingresa tu contraseña">
                     <a href="registro.html"><button class="btn btn-entrar" onclick="entrar()">Enviar</button>
+                    </div>
                 </div>
             </div>
         </div>
